--- a/views/login.pug
+++ b/views/login.pug
@@ -21,7 +21,12 @@ html
               input(type="password" name="password" id="password" class="form-control full-width" required)
             .d-grid.gap-2
               button.btn.btn-primary(type="submit" class="full-width") Sign in
+              p.text-center.mt-3
+                | Don't have an account? 
+                a(href="/register-pug") Sign up
         .col-md-6.d-flex.align-items-center.justify-content-center
           img(src="https://preview.redd.it/d34uc6cauqi11.png?auto=webp&s=3cec8ccb07189b57d2992d94b9774987ca8f3d5a" class="img-thumbnail w-100" alt="")
     script(src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous")
+
+
 
