--- a/views/account.pug
+++ b/views/account.pug
@@ -69,6 +69,7 @@ html
                                 a.btn.btn-outline-secondary(href="/edit-account-pug") Edit Account 
                                 a.btn.btn-outline-success(href="/create-tasks-pug") Create a Task
                                 a.btn.btn-outline-danger(href="/logout-pug") Logout
+                                a.btn.btn-outline-info(href="/dashboard-pug" target="_blank") See Dashboard
                                  
 
                 // Team selection form
