--- a/views/login.pug
+++ b/views/login.pug
@@ -7,6 +7,9 @@ html
       .full-width {
         width: 100%;
       }
+      .eye-icon {
+        cursor: pointer;
+      }
   body
     .container.d-flex.align-items-center.justify-content-center.min-vh-100
       .row.w-100
@@ -20,13 +23,30 @@ html
               input(type="text" name="username" id="username" class="form-control full-width" required)
             div.mb-3
               label(for="password" class="form-label") Password:
-              input(type="password" name="password" id="password" class="form-control full-width" required)
+              div(class="input-group")
+                input(type="password" name="password" id="password" class="form-control" required)
+                span(class="input-group-text eye-icon" onclick="togglePasswordVisibility()" style="background: url('/uploads/eye.avif') no-repeat center center; background-size: contain;")
             .d-grid.gap-2
               button.btn(type="submit" class="full-width" style="background-color: #A9D9D0;") Sign in
               p.text-center.mt-3
-                | Don't have an account? 
+                | Don't have an account?
                 a(href="/register-pug") Sign up
         .col-md-6.d-flex.align-items-center.justify-content-center
           img(src="/uploads/Rectangle27.png" class="img-thumbnail w-100" alt="")
     script(src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous")
+    script.
+      function togglePasswordVisibility() {
+        var passwordInput = document.getElementById('password');
+        var eyeIcon = document.querySelector('.bi');
+        if (passwordInput.type === 'password') {
+          passwordInput.type = 'text';
+          eyeIcon.classList.remove('bi-eye-slash');
+          eyeIcon.classList.add('bi-eye');
+        } else {
+          passwordInput.type = 'password';
+          eyeIcon.classList.remove('bi-eye');
+          eyeIcon.classList.add('bi-eye-slash');
+        }
+      }
+
 
