more log updates

--- a/views/account.pug
+++ b/views/account.pug
@@ -70,7 +70,7 @@ html
                                 a.btn.btn-outline-success(href="/create-tasks-pug") Create a Task
                                 a.btn.btn-outline-danger(href="/logout-pug") Logout
                                 a.btn.btn-outline-info(href="/dashboard-pug" target="_blank") See Dashboard
-                                 
+                                a.btn.btn-outline-warning(href="/logs" target="_blank") Check Logs
                 // Team selection form
                 .col-md-4
                     .team-selection
