--- a/views/dashboard.pug
+++ b/views/dashboard.pug
@@ -1,61 +1,38 @@
+
 doctype html
 html
     head
         title Dashboard
         link(href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous")
+        script.
+            function updateURL(param, value) {
+                const url = new URL(window.location.href);
+                url.searchParams.set(param, value);
+                window.location.href = url.toString();
+            }
     body
         .container
             h1.mb-4 User Dashboard
+            select(name="boardId" onchange="updateURL('boardId', this.value)")
+                option(value=defaultBoardId selected=(currentBoardId == defaultBoardId)) Potter Board
+                option(value=boardId1 selected=(currentBoardId == boardId1)) Miami EdTech 2024-2025 Tracker
+                option(value=boardId2 selected=(currentBoardId == boardId2)) GoSprout Sprint Board
+            select(name="memberId" onchange="updateURL('memberId', this.value)" class="mt-3")
+                option(value="" selected=(selectedMemberId === '')) All Members
+                each member in allMembers
+                    option(value=member.id selected=(selectedMemberId == member.id))= member.username
+            if members && members.length > 0
+                each member in members
+                    if !selectedMemberId || selectedMemberId == member.id
+                        div
+                            h2= member.username + ' (' + member.fullName + ')'
+                            p Total Cards: #{member.totalCards}
+                            each count, listName in member.cardsInList
+                                p= listName + ': ' + count
+            else
+                p No Trello users or cards found
 
-            // Dropdown for team filtering
-            .dropdown.mt-3.mb-5
-                button.btn.btn-secondary.dropdown-toggle(type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false")
-                    | Filter by teams
-                ul.dropdown-menu(aria-labelledby="dropdownMenuButton1")
-                    li
-                        a.dropdown-item(href="/dashboard-pug") Refresh
-                    each team in teams
-                        li
-                            a.dropdown-item(href=`/dashboard-pug?teamId=${team._id}`)= team.teamName
-
-            // Existing dashboard content
-            each user in users.filter(user => !selectedTeamId || user.teamId === selectedTeamId)
-                div.d-flex.align-items-center.my-4
-                    img(src=user.image, alt='User Image', width='30', height='30', class='rounded-circle ms-2')
-                    div.progress.flex-grow-1.ms-3
-                        div.progress-bar(style=`width: ${user.doneTickets / user.totalSprintTickets * 100}%`, role="progressbar", aria-valuenow=`${user.doneTickets / user.totalSprintTickets * 100}`, aria-valuemin="0", aria-valuemax="100")
-            table.table.mt-4
-                thead
-                    tr
-                        th(scope="col") Rank
-                        th(scope="col") Teammates
-                        th(scope="col") Number of tickets
-                        th(scope="col") In progress tickets
-                        th(scope="col") Done tickets
-                        th(scope="col") Score
-                        th(scope="col") Team
-                tbody
-                    if typeof users !== 'undefined' && users.length
-                        each user, index in users.filter(user => !selectedTeamId || user.teamId === selectedTeamId)
-                            tr
-                                th(scope="row")= index + 1
-                                td
-                                    img(src=user.image, alt='User Image', width='50', height='50', class='rounded-circle me-2')
-                                    | #{user.firstName} #{user.lastName}
-                                td= user.totalSprintTickets
-                                td= user.inProgressTickets
-                                td= user.doneTickets
-                                td= (user.doneTickets * (user.tasks.filter(task => task.status === 'done').reduce((sum, task) => sum + task.complexity, 0) / user.doneTickets)) / user.totalSprintTickets * 100
-                                td= user.teamName ? user.teamName : 'No team'
-                    else
-                        tr
-                            td(colspan="7") No users found
-
-        script(src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous")
+            script(src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous")
 
 
 
-//- Make rank based on high score - Done
-//- Make the graph above the table to calculate the number of tickets done versus the total number of tickets like on figma - Done
-
-//- Score Formula: Number of done tickets: total amount * (complexity of those tickets (total number added)) / the total number of done tickets / total number of sprint tickets * 100
