--- a/views/register.pug
+++ b/views/register.pug
@@ -22,22 +22,8 @@ html
                             label(for="username" class="form-label") Username:
                             input(type="text" name="username" id="username" class="form-control full-width" required)
                         div.mb-3
-                            label(for="firstName" class="form-label") First Name:
-                            input(type="text" name="firstName" id="firstName" class="form-control full-width" required)
-                        div.mb-3
-                            label(for="lastName" class="form-label") Last Name:
-                            input(type="text" name="lastName" id="lastName" class="form-control full-width" required)
-                        div.mb-3
                             label(for="email" class="form-label") Email:
                             input(type="email" name="email" id="email" class="form-control full-width" required)
-                        div.mb-3
-                            label(for="image" class="form-label") Profile Image:
-                            input(type="file" name="image" id="image" class="form-control full-width")
-                        div.mb-3
-                            label(for="role" class="form-label") Role:
-                            select(name="role" id="role" class="form-control full-width" required)
-                                option(value="user") user
-                                option(value="admin") admin
                         div.mb-3
                             label(for="password" class="form-label") Password:
                             div.input-group
@@ -50,7 +36,7 @@ html
                         | Already have an account? 
                         a(href="/login-pug") Login
                 .col-md-6.d-flex.align-items-center.justify-content-center
-                    img(src="/uploads/Rectangle27.png" class="img-thumbnail w-100" alt="Placeholder Image" style="margin-top: -50px;")
+                    img(src="/uploads/Rectangle27.png" class="img-thumbnail w-100" alt="Rectangle Image" style="margin-top: -50px;")
 script(src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous")
 script.
     function togglePasswordVisibility() {
