--- a/views/account.pug
+++ b/views/account.pug
@@ -51,6 +51,7 @@ html
         ul
             li: a(href='/dashboard-pug', target='_blank') Dashboard
             li: a(href='/members-pug', target='_blank') Members
+            li: a(href='/metrics-pug', target='_blank') GS Metrics
             li: a(href='/logs', target='_blank') Check Board Logs
         form(action='/logout', method='post')
             button(type='submit') Logout
