--- a/views/members.pug
+++ b/views/members.pug
@@ -3,6 +3,32 @@ html
   head
     title Members
     link(href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous")
+    style.
+      body {
+        background-color: #f8f9fa;
+      }
+      .container {
+        margin-top: 20px;
+      }
+      h1 {
+        color: #343a40;
+      }
+      select {
+        margin-bottom: 20px;
+      }
+      .card {
+        border: 1px solid #dee2e6;
+        border-radius: 0.25rem;
+      }
+      .card-body {
+        background-color: #ffffff;
+      }
+      .card-title {
+        color: #495057;
+      }
+      p {
+        margin-bottom: 0.5rem;
+      }
     script.
       function updateURL(param, value) {
         const url = new URL(window.location.href);
@@ -19,11 +45,11 @@ html
   body
     .container
       h1.mb-4 Board Members
-      select(name="boardId" onchange="updateURL('boardId', this.value)")
+      select(name="boardId" onchange="updateURL('boardId', this.value)" class="form-select")
         option(value=defaultBoardId selected=(currentBoardId === defaultBoardId)) Performance Tracker Board
         option(value=boardId1 selected=(currentBoardId === boardId1)) Miami EdTech 2024-2025 Tracker
         option(value=boardId2 selected=(currentBoardId === boardId2)) GoSprout Sprint Board
-      select(name="memberId" onchange="updateURL('memberId', this.value)")
+      select(name="memberId" onchange="updateURL('memberId', this.value)" class="form-select")
         option(value="") -- Select a Member --
         each member in allMembers
           option(value=member.id selected=(selectedMemberId === member.id))= member.username + ' (' + member.fullName + ')'
